<resources>
    <string name="app_name">Cat Addict</string>
    <string name="action_settings">Settings</string>
    <string name="money">Money: </string>
    <string name="happiness">Happiness:</string>
    <string name="hps">Happiness per second:</string>
    <string name="pet">Pet</string>
    <string name="work_button">Work</string>
    <string name="quantity">Quantity:</string>
    <string name="cost">Cost:</string>
    <string name="mps">Money Per Second:</string>
    <string name="zero">0</string>
    <string name="cats">Cats</string>
    <string name="accessories">Cat Toys</string>
    <string name="work">Work Hard</string>
    <string name="play">Play Hard</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>


    <string name="kitten">Kitten  -</string>
    <string name="kitten_flavour">  -  D\'aww</string>
    <string name="kitten_att">One happiness per second.</string>
    <string name="kitten_start_cost">£50</string>

    <string name="cat">Cat  -</string>
    <string name="cat_flavour">  -  Meow.</string>
    <string name="cat_att">Five happiness per second.</string>
    <string name="cat_start_cost">£500</string>

    <string name="shorthair">British Shorthair  -</string>
    <string name="shorthair_flavour">  -  Me-Owh..</string>
    <string name="shorthair_att">Ten happiness per second.</string>
    <string name="shorthair_start_cost">£5000</string>

    <string name="bengal">Bengal  -</string>
    <string name="bengal_flavour">  -  Scratchy, scratchy.</string>
    <string name="bengal_att">Fifteen happiness per second.</string>

    <string name="littertray">Litter Tray</string>
    <string name="littertray_flavour">But I poop in there</string>
    <string name="littertray_att">Double happiness from kittens</string>
</resources>
